api schema updates, health check handler (#29)
