# app/server/generated/handlers.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-05-15T01:06:24+00:00
+#   timestamp: 2024-05-15T17:03:26+00:00
 
 # mypy: disable-error-code="name-defined"
 
@@ -122,5 +122,6 @@ class _VHandler:
 # Define the virtual handlers for each router.
 # Doesn't matter if the module doesn't exist; the default handler will return a 501 error.
 experiments_handler = _VHandler('experiments')
+operations_handler = _VHandler('operations')
 redaction_handler = _VHandler('redaction')
 review_handler = _VHandler('review')
