# app/server/generated/main.py
@@ -1,26 +1,22 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-05-15T01:06:24+00:00
+#   timestamp: 2024-05-15T17:03:26+00:00
 
 from __future__ import annotations
 
 from fastapi import FastAPI
 
-from .routers import experiments, redaction, review
+from .routers import experiments, operations, redaction, review
 
 app = FastAPI(
     title='Blind Charging API',
     description='Status: **DRAFT**\n\n**_This is a draft specification. The objects and routes are subject to revision._**\n\nThis API lets an application communicate with the CPL Blind Charging module via an HTTP REST API.\n',
-    version='0.0.4',
+    version='0.1.0',
     contact={'name': 'Joe Nudell', 'email': 'jnudell@hks.harvard.edu'},
     license={'name': 'MIT License', 'url': 'https://opensource.org/license/mit/'},
 )
 
 app.include_router(experiments.router)
+app.include_router(operations.router)
 app.include_router(redaction.router)
 app.include_router(review.router)
-
-
-@app.get("/")
-async def root():
-    return {"message": "Gateway of the App"}
