# app/server/generated/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  ../../stanford-policylab/bc2/app/server/schema/openapi.yaml
-#   timestamp: 2024-05-15T01:06:24+00:00
+#   timestamp: 2024-05-15T17:03:26+00:00
 
 from __future__ import annotations
 
@@ -35,38 +35,12 @@ class DocumentText(BaseModel):
     content: str
 
 
-class BlindReviewInfo(BaseModel):
-    jurisdictionId: str
-    caseId: str
-    defendantId: str
-    blindReviewRequired: bool
-    redactedDocuments: List[DocumentLink]
-
-
 class Status(Enum):
     COMPLETE = 'COMPLETE'
 
 
-class RedactionResultSuccess(BaseModel):
-    jurisdictionId: str
-    caseId: str
-    defendantId: str
-    inputDocument: DocumentLink
-    redactedDocument: DocumentLink
-    status: Literal['COMPLETE']
-
-
 class Status1(Enum):
     ERROR = 'ERROR'
-
-
-class RedactionResultError(BaseModel):
-    jurisdictionId: str
-    caseId: str
-    defendantId: str
-    inputDocument: DocumentLink
-    error: str
-    status: Literal['ERROR']
 
 
 class Status2(Enum):
@@ -74,38 +48,33 @@ class Status2(Enum):
     PROCESSING = 'PROCESSING'
 
 
-class RedactionResultPending(BaseModel):
-    jurisdictionId: str
-    caseId: str
+class HumanName(BaseModel):
+    firstName: str
+    lastName: Optional[str] = None
+    middleName: Optional[str] = None
+    suffix: Optional[str] = None
+
+
+class MaskedDefendant(BaseModel):
     defendantId: str
-    inputDocument: DocumentLink
-    status: Literal['QUEUED', 'PROCESSING']
+    alias: str
 
 
-class RedactionResult(
-    RootModel[
-        Union[RedactionResultSuccess, RedactionResultError, RedactionResultPending]
-    ]
-):
-    root: Union[
-        RedactionResultSuccess, RedactionResultError, RedactionResultPending
-    ] = Field(..., discriminator='status')
-
-
-class RedactionStatus(BaseModel):
-    jurisdictionId: str
-    caseId: str
+class Defendant(BaseModel):
     defendantId: str
-    requests: List[RedactionResult]
+    name: Union[str, HumanName]
+    aliases: Optional[List[Union[str, HumanName]]] = None
+
+
+class Documents(RootModel[Union[DocumentLink, DocumentText]]):
+    root: Union[DocumentLink, DocumentText] = Field(..., discriminator='attachmentType')
 
 
 class RedactionRequest(BaseModel):
     jurisdictionId: str
     caseId: str
-    defendantId: str
-    document: Union[DocumentLink, DocumentText] = Field(
-        ..., discriminator='attachmentType'
-    )
+    defendants: List[Defendant] = Field(..., min_length=1)
+    documents: List[Documents] = Field(..., min_length=1)
     callbackUrl: AnyUrl
 
 
@@ -205,3 +174,69 @@ class Review(BaseModel):
     documentIds: List[str] = Field(..., min_length=1)
     decision: ReviewDecision
     timestamps: ReviewTimestamps
+
+
+class APIStatus(BaseModel):
+    detail: str
+
+
+class BlindReviewInfo(BaseModel):
+    jurisdictionId: str
+    caseId: str
+    blindReviewRequired: bool
+    maskedDefendants: List[MaskedDefendant]
+    redactedDocuments: List[DocumentLink]
+
+
+class RedactionResultSuccess(BaseModel):
+    jurisdictionId: str
+    caseId: str
+    maskedDefendants: List[MaskedDefendant]
+    inputDocument: DocumentLink
+    redactedDocument: DocumentLink
+    status: Literal['COMPLETE']
+
+
+class RedactionResultError(BaseModel):
+    jurisdictionId: str
+    caseId: str
+    maskedDefendants: List[MaskedDefendant]
+    inputDocument: DocumentLink
+    error: str
+    status: Literal['ERROR']
+
+
+class RedactionResultPending(BaseModel):
+    jurisdictionId: str
+    caseId: str
+    maskedDefendants: List[MaskedDefendant]
+    inputDocument: DocumentLink
+    status: Literal['QUEUED', 'PROCESSING']
+
+
+class RedactionResultCompleted(
+    RootModel[Union[RedactionResultSuccess, RedactionResultError]]
+):
+    root: Union[RedactionResultSuccess, RedactionResultError] = Field(
+        ...,
+        description='A completed redaction job. Similar to `RedactionResult`,\nbut where it is not possible to see a result in an incomplete (pending or queued) state.\n',
+        discriminator='status',
+    )
+
+
+class RedactionResult(
+    RootModel[
+        Union[RedactionResultSuccess, RedactionResultError, RedactionResultPending]
+    ]
+):
+    root: Union[
+        RedactionResultSuccess, RedactionResultError, RedactionResultPending
+    ] = Field(
+        ..., description='Information about a redaction job.\n', discriminator='status'
+    )
+
+
+class RedactionStatus(BaseModel):
+    jurisdictionId: str
+    caseId: str
+    requests: List[RedactionResult]
