# app/server/generated/routers/operations.py
@@ -1,0 +1,26 @@
+# generated by fastapi-codegen:
+#   filename:  openapi.yaml
+#   timestamp: 2024-05-15T17:03:26+00:00
+
+from __future__ import annotations
+
+from fastapi import APIRouter, Request
+
+from ..dependencies import *
+from ..handlers import operations_handler
+
+router = APIRouter(tags=['operations'])
+
+
+@router.get(
+    '/health',
+    response_model=APIStatus,
+    responses={'500': {'model': APIStatus}},
+    tags=['operations'],
+)
+async def health_check(request: Request) -> APIStatus:
+    """Health check
+
+    Check the health of the API.
+    """
+    return await operations_handler.health_check(**locals())
