# app/server/generated/routers/redaction.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-05-15T01:06:24+00:00
+#   timestamp: 2024-05-15T17:03:26+00:00
 
 from __future__ import annotations
 
@@ -18,11 +18,10 @@ _cb_router_redact_document = APIRouter()
 
 
 @_cb_router_redact_document.post('{$request.body#/callbackUrl}', response_model=None)
-def post_redaction_complete_0(body: RedactionResult) -> None:
+def post_redaction_complete_0(body: RedactionResultCompleted) -> None:
     """Redaction complete
 
-    This callback is made when the redaction process is complete.
-    The redacted document URL is provided in the response body.
+    This callback is made for each input document when it is finished.
     """
     pass
 
@@ -39,14 +38,14 @@ async def redact_document(request: Request, body: RedactionRequest) -> None:
     Submit a document for redaction. Redaction happens asynchronously and may take some time.
     When finished, the redacted document will be posted to the provided callback URL.
 
-    A callback will be POSTed to the provided URL when the redaction process is completed.
-    The callback will contain a `RedactionResult` (either `RedactionResultSuccess` or `RedactionResultError`).
+    A callback will be POSTed to the provided URL when the redaction process is completed for each input document.
+    The callback will contain either `RedactionResultSuccess` or `RedactionResultError`.
     """
     return await redaction_handler.redact_document(**locals())
 
 
 @router.get(
-    '/redact/{jurisdictionId}/{caseId}/{defendantId}',
+    '/redact/{jurisdictionId}/{caseId}',
     response_model=RedactionStatus,
     tags=['redaction'],
 )
@@ -54,7 +53,7 @@ async def get_redaction_status(
     request: Request,
     jurisdiction_id: str = Path(..., alias='jurisdictionId'),
     case_id: str = Path(..., alias='caseId'),
-    defendant_id: str = Path(..., alias='defendantId'),
+    defendant_id: Optional[str] = Query(None, alias='defendantId'),
 ) -> RedactionStatus:
     """Get status of document redaction for a case.
 
