# app/server/generated/routers/review.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-05-15T01:06:24+00:00
+#   timestamp: 2024-05-15T17:03:26+00:00
 
 from __future__ import annotations
 
@@ -13,7 +13,7 @@ router = APIRouter(tags=['review'])
 
 
 @router.get(
-    '/blindreview/{jurisdictionId}/{caseId}/{defendantId}',
+    '/blindreview/{jurisdictionId}/{caseId}',
     response_model=BlindReviewInfo,
     responses={'424': {'model': Error}},
     tags=['review'],
@@ -22,9 +22,9 @@ async def get_blind_review_info(
     request: Request,
     jurisdiction_id: str = Path(..., alias='jurisdictionId'),
     case_id: str = Path(..., alias='caseId'),
-    defendant_id: str = Path(..., alias='defendantId'),
+    defendant_id: Optional[str] = Query(None, alias='defendantId'),
 ) -> Union[BlindReviewInfo, Error]:
-    """Get information about blind review for a given defendant in a given case.
+    """Get information about blind review for a given case.
 
     This endpoint provides information about the blind review process for the given case.
 
